new example and pricing structure
Adding in a new website example under the our work page, and revamping the pricing structure to be a quote system

--- a/Pages/aboutUs.html
+++ b/Pages/aboutUs.html
@@ -7,6 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About us</title>
   </head>
+
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-ECKG6MBJER"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-ECKG6MBJER");
+  </script>
+
   <body>
     <!-- ###### -->
     <!-- Header -->
@@ -26,7 +42,7 @@
             <li class="navItem">·</li>
             <li class="navItem"><a href="./ourWork.html">Our Work</a></li>
             <li class="navItem">·</li>
-            <li class="navItem"><a href="./catalog.html">Catalog</a></li>
+            <li class="navItem"><a href="./contactUs.html">Contact Us</a></li>
           </ul>
         </nav>
       </div>
@@ -72,7 +88,7 @@
 
             <li class="navItem"><a href="./ourWork.html">Our Work</a></li>
 
-            <li class="navItem"><a href="./catalog.html">Catalog</a></li>
+            <li class="navItem"><a href="./contactUs.html">Contact us</a></li>
           </ul>
         </nav>
       </div>
