--- a/Pages/contactUs.html
+++ b/Pages/contactUs.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../Assets/styles/index.css" />
+    <link rel="stylesheet" href="../Assets/styles/contactUs.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./Assets/styles/index.css" />
-    <link rel="stylesheet" href="./Assets/styles/homePage.css" />
-    <title>Home</title>
+    <title>Contact Us</title>
   </head>
 
   <!-- Google tag (gtag.js) -->
@@ -38,13 +38,11 @@
         </h2>
         <nav>
           <ul class="headerNavList">
-            <li class="navItem"><a href="./Pages/aboutUs.html">About us</a></li>
+            <li class="navItem"><a href="./aboutUs.html">About us</a></li>
             <li class="navItem">·</li>
-            <li class="navItem"><a href="./Pages/ourWork.html">Our Work</a></li>
+            <li class="navItem"><a href="./ourWork.html">Our Work</a></li>
             <li class="navItem">·</li>
-            <li class="navItem">
-              <a href="./Pages/contactUs.html">Contact us</a>
-            </li>
+            <li class="navItem"><a href="./contactUs.html">Contact us</a></li>
           </ul>
         </nav>
       </div>
@@ -56,12 +54,22 @@
     <!-- Main content -->
     <!-- ############ -->
     <div class="homePageWapper centerContent">
-      <div class="titleCard">
-        <h1>Lawrence Software Company</h1>
+      <div class="contactInfoContainer">
+        <h1>Contact Us</h1>
         <span
-          >Crafting Tailored Excellence: Where Fun Meets Premium in Web
-          Development!</span
+          >If you're interested in our services feel free to contact us</span
         >
+        <ul class="contactOptions">
+          <li class="contactMethod">
+            Email: lawrencesoftwarecompany@gmail.com
+          </li>
+          <li>
+            <a
+              href="https://docs.google.com/forms/d/e/1FAIpQLScgeeIlgCIx_BN8CNfaj8ny6_wmZWFI6JFNgy6JuWy4yV7czw/viewform?usp=sf_link"
+              >Our contact form</a
+            >
+          </li>
+        </ul>
       </div>
     </div>
 
@@ -72,13 +80,11 @@
       <div>
         <nav>
           <ul class="footerNavList">
-            <li class="navItem"><a href="./Pages/aboutUs.html">About us</a></li>
+            <li class="navItem"><a href="./aboutUs.html">About us</a></li>
 
-            <li class="navItem"><a href="./Pages/ourWork.html">Our Work</a></li>
+            <li class="navItem"><a href="./ourWork.html">Our Work</a></li>
 
-            <li class="navItem">
-              <a href="./Pages/contactUs.html">Contact us</a>
-            </li>
+            <li class="navItem"><a href="./contactUs.html">Contact us</a></li>
           </ul>
         </nav>
       </div>
