--- a/Pages/ourWork.html
+++ b/Pages/ourWork.html
@@ -7,6 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Our Work</title>
   </head>
+
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-ECKG6MBJER"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-ECKG6MBJER");
+  </script>
+
   <body>
     <!-- ###### -->
     <!-- Header -->
@@ -26,7 +42,7 @@
             <li class="navItem">·</li>
             <li class="navItem"><a href="./ourWork.html">Our Work</a></li>
             <li class="navItem">·</li>
-            <li class="navItem"><a href="./catalog.html">Catalog</a></li>
+            <li class="navItem"><a href="./contactUs.html">Contact us</a></li>
           </ul>
         </nav>
       </div>
@@ -43,7 +59,47 @@
 
         <!-- Examples Container -->
         <div class="examples">
-          <!-- Example #1 -->
+          <!-- Example 1 -->
+          <div class="exampleContainer">
+            <div class="exampleInfo">
+              <h2>Greg's Carpentry And Remodeling</h2>
+
+              <p>
+                Greg runs a carpentry and remodeling business in the Salt Lake
+                City UT area. He does great work and has the reviews to back it
+                up.
+              </p>
+
+              <p>
+                I discovered Gregs business while browsing the service section
+                on a classified site. I noticed that he didn't have a website
+                and so I reached out offering to make him one
+              </p>
+
+              <p>
+                After some going back and fourth I got an idea of more or less
+                what he was looking for and got to work. Gregs website features
+                some of his work, and reviews from clietns. I am pretty happy
+                with how it all turned out, and hopping it works out for him. So
+                if you're in the Salt Lake City UT area and need some carpentry
+                and remodeling done, check out Gregs website
+              </p>
+              <p>
+                <a
+                  href="https://gregscarpentryandremodeling.com/"
+                  target="_blank"
+                  >Greg's Carpentry And Remodeling</a
+                >
+              </p>
+            </div>
+            <iframe
+              src="https://gregscarpentryandremodeling.com/"
+              frameborder="0"
+              class="exampleSiteIframe"
+            ></iframe>
+          </div>
+
+          <!-- Example #2 -->
           <div class="exampleContainer">
             <!-- Site Info -->
             <div class="exampleInfo">
@@ -108,7 +164,7 @@
 
             <li class="navItem"><a href="./ourWork.html">Our Work</a></li>
 
-            <li class="navItem"><a href="./catalog.html">Catalog</a></li>
+            <li class="navItem"><a href="./contactUs.html">Contact us</a></li>
           </ul>
         </nav>
       </div>
